--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "peerDependencies": {
     "typescript": "^5.4.5"
   },
+  "scripts": {
+    "test": "bun test"
+  },
   "license": "MIT",
   "private": false,
   "type": "module"
