--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "module": "index.ts",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "eslint": "^9.1.1"
   },
   "peerDependencies": {
     "typescript": "^5.4.5"
   },
+  "license": "MIT",
+  "private": false,
   "scripts": {
     "test": "bun test"
   },
-  "license": "MIT",
-  "private": false,
   "type": "module"
 }
